@@ -1,4 +1,4 @@
-// Copyright (C) 2017-2022 Internet Systems Consortium, Inc. ("ISC")
+// Copyright (C) 2017-2023 Internet Systems Consortium, Inc. ("ISC")
 //
 // This Source Code Form is subject to the terms of the Mozilla Public
 // License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -200,6 +200,15 @@ public:
     /// @return A pointer to unparsed shared network configuration.
     virtual data::ElementPtr toElement() const;
 
+    /// @brief Generates an identifying label for logging.
+    ///
+    /// @return string containing the label
+    virtual std::string getLabel() const {
+        std::stringstream ss;
+        ss << "shared-network " << name_;
+        return (ss.str());
+    }
+
 private:
 
     /// @brief Holds a name of a shared network.
@@ -397,6 +406,15 @@ public:
     ///
     /// @return A pointer to unparsed shared network configuration.
     virtual data::ElementPtr toElement() const;
+
+    /// @brief Generates an identifying label for logging.
+    ///
+    /// @return string containing the label
+    virtual std::string getLabel() const {
+        std::stringstream ss;
+        ss << "shared-network " << name_;
+        return (ss.str());
+    }
 
 private:
 
